--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: 'config.gradle'
 buildscript {
     ext.kotlin_version = '1.3.41'
     repositories {
         google()
         jcenter()
-        
-    }
+     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -19,7 +18,12 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+//        maven {
+//            url "https://jitpack.io"
+//        }
+        maven {
+            url "https://dl.bintray.com/jiangyang/maven"
+        }
     }
 }
 
