--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,13 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+RELEASE_URL=http://127.0.0.1:8081/repository/maven-releases/
+SNAPSHOT_URL=http://127.0.0.1:8081/repository/maven-snapshots/
+LOCAL_URL=file://E:/maven/mvn-repo/
+ISNEXUS=false
+NAME=admin
+PASSWORD=admin123
+GROUP=com.banzhi.repeat
+POM_ARTIFACT_ID=repeatManager
+VERSION=1.0.1
