--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ kotlin.code.style=official
 RELEASE_URL=http://127.0.0.1:8081/repository/maven-releases/
 SNAPSHOT_URL=http://127.0.0.1:8081/repository/maven-snapshots/
 LOCAL_URL=file://E:/maven/mvn-repo/
-ISNEXUS=false
+ISNEXUS=true
 NAME=admin
 PASSWORD=admin123
 GROUP=com.banzhi.repeat
