--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-//    implementation project(path: ':repeat')
-    implementation 'com.banzhi.repeat:repeat:2.0.0'
+    implementation project(path: ':repeat')
+//    implementation 'com.banzhi.repeat:repeat:2.0.0'
 }
